# bups

./: .ai-provenance.yml  .gitignore  .gitlab-ci.yml  pyproject.toml  setup.py
bups/: __init__.py  config.py  gtk.py  manager.py  scheduler_worker.py  sudo.py  sudo_worker.py  version.py  worker.py
bups/fuse/: bup.py  encfs.py  google_drive.py  root.py  sshfs.py
bups/scheduler/: __init__.py  anacron.py  systemd.py  systemd_user.py
debian/: changelog  control  copyright  rules
tools/: container-build.sh  container-verify.sh
